added aws lambda update

--- a/.github/workflows/push-request.yml
+++ b/.github/workflows/push-request.yml
@@ -32,5 +32,8 @@ jobs:
     - name: Push artifacts to s3
       run: |
         aws s3 sync ./lambda_artifact s3://${{ secrets.CODEDEPLOY_BUCKETNAME }}
+    - name: Update lambda
+      run: |
+        aws lambda update-function-code --function-name Email_Service --s3-bucket ${CODEDEPLOY_BUCKETNAME} --s3-key serverless_artifact.zip --region us-east-1 > lambdaFile.txt
 
       
