--- a/.github/workflows/push-request.yml
+++ b/.github/workflows/push-request.yml
@@ -15,14 +15,17 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
+    - run: | 
+        npm install
+        ls
+        cd node_modules
+        ls
+        cd ..
     - run: npm run build --if-present
-    - name: Build Deployment Artifact
+    - name: Zip lambda Artifacts
       run: | 
-        mkdir lambda_artifact
-        zip -r lambdaFunction .
-        mv lambdaFunction.zip lambda_artifact
-        cd lambda_artifact
+        zip -r lambdaFunction.zip test.js package.json package-lock.json node_modules
+        touch 777 lambdaFile.txt
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -31,7 +34,7 @@ jobs:
         aws-region: us-east-1
     - name: Push artifacts to s3
       run: |
-        aws s3 sync ./lambda_artifact s3://${{ secrets.CODEDEPLOY_BUCKETNAME }}
+        aws s3 sync ./lambdaFunction s3://${{ secrets.CODEDEPLOY_BUCKETNAME }}
     - name: Update lambda
       run: |
         aws lambda update-function-code --function-name Email_Service --s3-bucket ${{ secrets.CODEDEPLOY_BUCKETNAME }} --s3-key lambdaFunction.zip --region us-east-1 > lambdaFile.txt
