--- a/.github/workflows/push-request.yml
+++ b/.github/workflows/push-request.yml
@@ -3,6 +3,7 @@ name: Deploy build on push requests
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
